src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_docstring_doubles_over_docstring_doubles_class.py.snap
---
source: src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesMultilineString:
      quote: single
  location:
    row: 3
    column: 4
  nd_location:
    row: 3
    column: 27
  fix:
    content:
      - "''' Not a docstring '''"
    location:
      row: 3
      column: 4
    end_location:
      row: 3
      column: 27
  parent: ~
- kind:
    BadQuotesMultilineString:
      quote: single
  location:
    row: 5
    column: 22
  end_location:
    row: 5
    column: 43
  fix:
    content:
      - "'''not a docstring'''"
    location:
      row: 5
      column: 22
    end_location:
      row: 5
      column: 43
  parent: ~

