src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_docstring_doubles_over_docstring_singles_module_multiline.py.snap
---
source: src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesDocstring:
      quote: double
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 3
  fix:
    content:
      - "\"\"\""
      - Double quotes multiline module docstring
      - "\"\"\""
    location:
      row: 1
      column: 0
    end_location:
      row: 3
      column: 3
  parent: ~

