src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_doubles_over_singles_escaped.py.snap
---
source: src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    AvoidQuoteEscape: ~
  location:
    row: 1
    column: 25
  end_location:
    row: 1
    column: 47
  fix:
    content:
      - "'This is a \"string\"'"
    location:
      row: 1
      column: 25
    end_location:
      row: 1
      column: 47
  parent: ~
- kind:
    AvoidQuoteEscape: ~
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 16
  fix:
    content:
      - "'\"string\"'"
    location:
      row: 9
      column: 4
    end_location:
      row: 9
      column: 16
  parent: ~

