src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_singles_over_doubles_implicit.py.snap
---
source: src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesInlineString:
      quote: single
  location:
    row: 2
    column: 4
  end_location:
    row: 2
    column: 10
  fix:
    content:
      - "'This'"
    location:
      row: 2
      column: 4
    end_location:
      row: 2
      column: 10
  parent: ~
- kind:
    BadQuotesInlineString:
      quote: single
  location:
    row: 3
    column: 4
  end_location:
    row: 3
    column: 8
  fix:
    content:
      - "'is'"
    location:
      row: 3
      column: 4
    end_location:
      row: 3
      column: 8
  parent: ~
- kind:
    BadQuotesInlineString:
      quote: single
  location:
    row: 4
    column: 4
  end_location:
    row: 4
    column: 9
  fix:
    content:
      - "'not'"
    location:
      row: 4
      column: 4
    end_location:
      row: 4
      column: 9
  parent: ~
- kind:
    BadQuotesInlineString:
      quote: single
  location:
    row: 8
    column: 4
  end_location:
    row: 8
    column: 10
  fix:
    content:
      - "'This'"
    location:
      row: 8
      column: 4
    end_location:
      row: 8
      column: 10
  parent: ~
- kind:
    BadQuotesInlineString:
      quote: single
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 8
  fix:
    content:
      - "'is'"
    location:
      row: 9
      column: 4
    end_location:
      row: 9
      column: 8
  parent: ~
- kind:
    BadQuotesInlineString:
      quote: single
  location:
    row: 10
    column: 4
  end_location:
    row: 10
    column: 9
  fix:
    content:
      - "'not'"
    location:
      row: 10
      column: 4
    end_location:
      row: 10
      column: 9
  parent: ~
- kind:
    BadQuotesInlineString:
      quote: single
  location:
    row: 27
    column: 0
  end_location:
    row: 27
    column: 30
  fix:
    content:
      - "'But this needs to be changed'"
    location:
      row: 27
      column: 0
    end_location:
      row: 27
      column: 30
  parent: ~

